--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,10 @@ h2 {
     line-height: normal;
     letter-spacing: normal;
 }
+
+.hidden {
+    margin: 0 !important;
+    padding: 0 !important;
+    height: 0px;
+    visibility: hidden;
+}
