--- a/src/Styles/Column.css
+++ b/src/Styles/Column.css
@@ -1,8 +1,11 @@
 .column-element {
+    padding: 0 8px 8px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 261px;
+    justify-content: space-between;
+    align-items: center;
+    width: 244px;
+    height: 710px;
     border-radius: 10px;
     background: #DDD;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -10,17 +13,56 @@
 }
 
 .name-column {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90px;
+    width: 160px;
     margin: 18px 50px;
-    color: #000;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: Montserrat;
+}
+
+.name-column h2 {
+    margin: 0;
+    padding: 0;
     font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
 }
 
 .cards-list {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    list-style: none;
     margin-top: 17px;
-    height: 50px;
+    padding: 0;
+    width: 244px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.color-slider {
+    margin-top: 10px;
+    width: 180px;
+}
+
+.people-card {
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90px;
+    border-radius: 5px;
+    border: 1px solid #DDD;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.people-card div {
+    font-size: 20px;
+}
+
+.people-card:hover {
+    border: #FED201 solid 1px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
