--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,19 @@ body {
   padding: 0;
   font-family: Montserrat;
   color: black;
+  overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+::-webkit-scrollbar {
+  width: 0px; 
+  background: transparent;
+}
+
+html {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 code {
