--- a/src/Styles/Column.css
+++ b/src/Styles/Column.css
@@ -1,13 +1,13 @@
 .column-element {
-    padding: 0 8px 8px;
+    padding: 0 0 8px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 244px;
+    width: 260px;
     height: 710px;
     border-radius: 10px;
-    background: #DDD;
+    background-color: #DDD;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     text-align: center;
 }
@@ -33,10 +33,11 @@
     list-style: none;
     margin-top: 17px;
     padding: 0;
-    width: 244px;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
 }
 
@@ -50,7 +51,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 244px;
     height: 90px;
     border-radius: 5px;
     border: 1px solid #DDD;
