--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ button {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+button:hover{
+    background: #FEB101;
+}
+
 h2 {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-size: 30px;
@@ -15,8 +19,9 @@ h2 {
     letter-spacing: normal;
 }
 
-.main-container {
-    overflow-y: scroll;
+img {
+    margin: 0;
+    padding: 0;
 }
 
 .hidden {
