--- a/src/Styles/CardInfo.css
+++ b/src/Styles/CardInfo.css
@@ -9,13 +9,34 @@
 }
 
 .card-container p {
-    display: inline;
+    display: inline-block;
+    white-space: nowrap;
     margin: 0;
+    padding: 0;
 }
 
+[class^="div-"] {
+    height: 24px;
+    display: flex;
+    align-items: center;
+} 
+
 .card-container .info {
+    margin-top: 8px;
     margin-left: 20px;
-   text-decoration: underline;
+    padding: 0;
+    text-decoration: underline;
+    overflow-x: scroll;
+}
+
+.card-container .info::-webkit-scrollbar{
+    height: 8px;
+}
+
+.card-container .info::-webkit-scrollbar-thumb {
+    background-color: #C9C9C9;  
+  border-radius: 20px;      
+  border: 3px solid white;
 }
 
 .card-field {
@@ -98,6 +119,10 @@
     grid-area: about-me;
 }
 
+#test-result {
+    overflow: hidden;
+}
+
 .about-me {
     margin-top: 20px !important;
     display: block !important;
@@ -128,6 +153,7 @@
 }
 
 .test-info p {
+    white-space: wrap;
     width: 268px;
     text-align: center;
     margin-bottom: 10px;
