--- a/src/Styles/CardList.css
+++ b/src/Styles/CardList.css
@@ -2,7 +2,7 @@
     padding: 0 0 8px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content:space-around;
     align-items: center;
     width: 260px;
     height: 710px;
@@ -41,9 +41,8 @@
     gap: 20px;
 }
 
-.hue-picker {
+.color-picker {
     margin-top: 10px;
-    width: 180px !important;
 }
 
 .people-card {
@@ -66,4 +65,9 @@
 .people-card:hover {
     border: #FED201 solid 1px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.cards-list a {
+    color: black;
+    text-decoration: none;
 }
