--- a/src/Styles/TableRow.css
+++ b/src/Styles/TableRow.css
@@ -9,9 +9,9 @@
     margin-top: 16px;
 }
 
-.row :hover{
-    background-color: rgb(222, 222, 222);
-}
+/* .row :hover{
+    background-color: #dedede;
+} */
 
 .row h2 {
     padding: 0;
