--- a/src/Styles/TableBoard.css
+++ b/src/Styles/TableBoard.css
@@ -1,7 +1,8 @@
 .container {
     width: 1885px;
     height: 52px;
-    margin-top: 23px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     padding: 0;
     margin-left: auto;
     margin-right: auto;
