--- a/src/Styles/TableBoard.css
+++ b/src/Styles/TableBoard.css
@@ -13,12 +13,21 @@ button {
     height: 52px;
 }
 
+select {
+    width: 232px;
+    height: 52px;
+}
+
+.filter-by-course {
+    margin-left: 30px;
+}
+
 .search-input {
     width: 718px;
     height: 42px;
     margin-top: 5px;
-    margin-left: 149px;
-    margin-right: 100px;
+    margin-left: 40px;
+    margin-right: 40px;
     font-size: 22px;
     background-color: #F6F6F6;
     border-top: none;
