--- a/src/Styles/TableBoard.css
+++ b/src/Styles/TableBoard.css
@@ -52,8 +52,6 @@ select {
     border-radius: 0px 0px 40px 40px;
     background-color: #F6F6F6;
     border-top: none;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 16px;
 }
 
@@ -63,40 +61,72 @@ select {
     overflow: scroll;
 }
 
-.table-header h2 {
+table {
+    margin-left: 17px;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+table tbody {
+    width: 1885px;
+    vertical-align: middle;
+}
+
+.table-header th {
+    display: flex;
+    align-items: center;
+    justify-content:flex-start;
     font-size: 22px;
     text-align: center;
 }
 
 .th-fio {
     margin-left: 20px;
-    width: 280px;
+    width: 290px;
 }
 
 .th-status {
-    margin-left: 35px;
-    width: 300px;
+    margin-left: 98px;
+    width: 88px;
 }
 
 .th-phone-number {
-    margin-left: 20px;
-    width: 160px;
+    margin-left: 130px;
+    width: 114px;
 }
 
 .th-vk-link {
-    margin-left: 60px;
-    width: 100px;
-}
-
-.th-email {
-    margin-left: 60px;
+    margin-left: 98px;
     width: 90px;
 }
 
+.th-email {
+    margin-left: 86px;
+    width: 72px;
+}
+
 .th-uni {
-    margin-left: 30px;
+    margin-left: 62px;
+    width: 126px;
+}
+
+.th-direction{
+    margin-left: 22px;
+    width: 158px;
 }
 
 .th-course {
     margin-left: 20px;
+    width: 56px;
+}
+
+.th-degree {
+    margin-left: 42px;
+    width: 100px;
+}
+
+.th-results {
+    margin-left: 40px;
+    width: 136px;
 }
