--- a/src/Styles/TableRow.css
+++ b/src/Styles/TableRow.css
@@ -1,40 +1,35 @@
 .row {
     display: flex;
     align-items: center;
-    width: 1870px;
+    justify-content:space-between;
     height: 100px;
     border: 3px solid black;
     border-radius: 30px;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 16px;
 }
 
-.row h2 {
-    margin-top: auto;
-    margin-bottom: auto;
-    padding-bottom: 0;
-    font-size: 22px;
-    text-align: center;
+.row:hover{
+    background-color: #DEDEDE;
 }
 
 .row td {
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-weight: 900;
+    line-height: normal;
+    letter-spacing: normal;
+    font-size: 22px;
+    text-align: center;
     height: 80px;
+    display: flex;
+    align-items: center;
+    justify-items: center;
 }
 
-.fio {
-    margin-left: 10px;
-    width: 260px;
-}
-
-.status {
-    margin-left: 55px;
-    width: 230px;
-}
-
-.phone-number {
-    margin-left: 10px;
-    width: 180px;
+.row td h2 {
+    font-size: 24px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .vk-link,
@@ -42,42 +37,62 @@
 .uni,
 .direction,
 .course,
-.degree,
-.results {
-    padding-top: 15px;
+.results  {
+    justify-content:left !important;
+    padding-top: 16px;
     overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+.fio{
+    margin: 0;
+    width: 340px;
+}
+
+.status {
+    margin: 0;
+    width: 220px;
+}
+
+.phone-number{
+    margin: 0;
+    width: 242px;
 }
 
 .vk-link {
-    margin-left: 35px;
-    width: 120px;
+    margin: 0;
+    width: 174px;
 }
 
 .email {
-    margin-left: 35px;
-    width: 110px;
+    margin: 0;
+    margin-left: 10px;
+    width: 140px;
 }
 
-.uni {
-    margin-left: 43px;
-    width: 110px;
+.uni{
+    margin: 0;
+    margin-left: 10px;
+    width: 152px;
 }
 
-.direction {
-    margin-left: 40px;
-    width: 170px;
+.direction{
+    margin: 0;
+    width: 184px;
 }
 
-.course {
-    margin-left: 5px;
-    width: 70px;
+.course{
+    margin: 0;
+    margin-left: 10px;
+    width: 76px;
 }
 
 .degree {
-    width: 170px;
+    margin: 0;
+    width: 162px;
 }
 
 .results {
-    margin-left: 10px;
-    width: 150px;
+    margin: 0;
+    width: 154px;
 }
