--- a/src/Styles/TableBoard.css
+++ b/src/Styles/TableBoard.css
@@ -16,6 +16,17 @@ button {
 select {
     width: 232px;
     height: 52px;
+    font-size: 30px;
+    font-family: Montserrat;
+    border-radius: 5px;
+    border: 1px solid #C9C9C9;
+    background: #FED201;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+option {
+    border-radius: 100px;
+    font-size: 20px;
 }
 
 .filter-by-course {
