--- a/src/Styles/TableBoard.css
+++ b/src/Styles/TableBoard.css
@@ -25,8 +25,10 @@ select {
 }
 
 option {
+    text-align: center;
     border-radius: 100px;
     font-size: 20px;
+    background-color: white;
 }
 
 .filter-by-course {
@@ -85,6 +87,7 @@ table tbody {
 }
 
 .table-header th {
+    text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     align-items: center;
     justify-content:flex-start;
