--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@ h2 {
     letter-spacing: normal;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 img {
     margin: 0;
     padding: 0;
