--- a/src/Styles/CardInfo.css
+++ b/src/Styles/CardInfo.css
@@ -170,6 +170,7 @@
 }
 
 .change-status-btn {
+    padding: 0;
     width: 300px;
     margin-left: 80px;
 }
@@ -184,7 +185,7 @@
 }
 
 .stud-test-results option {
-    font-size: 17px;
+    font-size: 15px;
 }
 
 .student-status {
